# visionkit-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: codeql.yml
examples/: 01_vn_document_camera_view_controller.rs  02_framework_smoke.rs  03_data_scanner_view_controller.rs  04_image_analyzer.rs  05_live_text_interaction.rs  06_image_analysis.rs  07_recognized_text.rs  08_barcode.rs  09_recognized_item.rs  10_async_analyze.rs
src/: async_api.rs  barcode.rs  data_scanner_view_controller.rs  error.rs  image_analysis.rs  image_analyzer.rs  lib.rs  live_text_interaction.rs  private.rs  recognized_item.rs  recognized_text.rs  support.rs  vn_document_camera_view_controller.rs
src/analyzer/: mod.rs
src/ffi/: barcode.rs  core.rs  data_scanner_view_controller.rs  image_analysis.rs  image_analyzer.rs  live_text_interaction.rs  mod.rs  recognized_item.rs  recognized_text.rs  vn_document_camera_view_controller.rs
swift-bridge/: Package.swift
swift-bridge/Sources/VisionKitBridge/: Analyzer.swift  Async.swift  Barcode.swift  Core.swift  DataScannerViewController.swift  ImageAnalysis.swift  ImageAnalyzer.swift  LiveTextInteraction.swift  RecognizedItem.swift  RecognizedText.swift  VNDocumentCameraViewController.swift
swift-bridge/Sources/VisionKitBridge/include/: VisionKitBridge.h  module.modulemap
tests/: api_coverage.rs  async_api_tests.rs  barcode_tests.rs  data_scanner_view_controller_tests.rs  image_analysis_tests.rs  image_analyzer_tests.rs  live_text_interaction_tests.rs  recognized_item_tests.rs  recognized_text_tests.rs  vn_document_camera_view_controller_tests.rs
