[package]
name = "visionkit-rs"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/visionkit-rs"
repository = "https://github.com/doom-fish/visionkit-rs"
description = "Safe Rust bindings for VisionKit.framework — image analysis, Live Text, and availability-aware area coverage on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["visionkit", "ocr", "macos", "apple", "vision"]
categories = ["api-bindings", "os::macos-apis", "multimedia::images"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "COVERAGE.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "visionkit"
crate-type = ["lib"]

[features]
default = []
async = ["dep:doom-fish-utils"]

[dependencies]
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
debug = "full"
strip = "none"
